Further changes in setup.py

--- a/development/anedya-dev-sdk-python/setup.cfg
+++ b/development/anedya-dev-sdk-python/setup.cfg
@@ -1,20 +1,15 @@
 [metadata]
-name = anedya-sdk
-version = 0.1.0
-author = Saransh Jaiswal
-author_email = saranshjaiswal09@gmail.com
-description = Anedya SDK for IoT devices
-long_description = file: README.md
-long_description_content_type = text/markdown
-url = https://github.com/
-license = Apache License 2.0
+# This includes the license file(s) in the wheel.
+# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
 license_files = LICENSE.txt
 
-[options]
-packages = find:
-install_requires =
-    requests
+[bdist_wheel]
+universal = 1
 
-[options.packages.find]
-where = anedya_sdk
+[flake8]
+# For the definitions of error codes, see
+# - https://flake8.pycqa.org/en/latest/user/error-codes.html
+# - https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
 
+# why: long lines are handled by black
+ignore = E501
