Changed metadata and added time sync support

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,26 @@
 [metadata]
-# This includes the license file(s) in the wheel.
-# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
-license_files = LICENSE.txt
+name = anedya-dev-sdk
+version = 0.0.8
+url = https://github.com/anedyaio/anedya-dev-sdk-pyhton
+author = Anedya Systems
+author_email = support@anedya.io
+description = Anedya python based SDK for IoT devices. This SDK is currently under development. Future versions may include breaking changes.
+long_description = file: README.md
+license = Apache License 2.0
+classifiers =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Topic :: Software Development :: Libraries :: Python Modules
+project_urls =
+    Documentation = https://docs.anedya.io
+    Release notes = https://github.com/anedyaio/anedya-dev-sdk-pyhton
+    Source = https://github.com/anedyaio/anedya-dev-sdk-pyhton
 
 [bdist_wheel]
 universal = 1
