--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,19 @@
 [metadata]
 name = anedya-dev-sdk
-version = 0.0.9
+version = 0.1.0
 url = https://github.com/anedyaio/anedya-dev-sdk-pyhton
 author = Anedya Systems
 author_email = support@anedya.io
 description = Anedya python based SDK for IoT devices. This SDK is currently under development. Future versions may include breaking changes.
 long_description = file: README.md
+requires-python = ">=3.7"
+dependencies = [
+    "requests",
+    "paho-mqtt>=2.0.0"
+]
 license = Apache License 2.0
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 4 - Beta
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
