MQTT Support - Beta

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,13 +4,10 @@ version = 0.1.0
 url = https://github.com/anedyaio/anedya-dev-sdk-pyhton
 author = Anedya Systems
 author_email = support@anedya.io
-description = Anedya python based SDK for IoT devices. This SDK is currently under development. Future versions may include breaking changes.
+description = Anedya python based SDK for IoT devices. This SDK streamlines connectivity with Anedya platform. As this SDK is in Beta release, future versions may have breaking changes.
 long_description = file: README.md
 requires-python = ">=3.7"
-dependencies = [
-    "requests",
-    "paho-mqtt>=2.0.0"
-]
+dependencies = ["requests","paho-mqtt>=2.0.0"]
 license = Apache License 2.0
 classifiers =
     Development Status :: 4 - Beta
@@ -34,6 +31,6 @@ universal = 1
 # For the definitions of error codes, see
 # - https://flake8.pycqa.org/en/latest/user/error-codes.html
 # - https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
-
+max-line-length = 120
 # why: long lines are handled by black
 ignore = E501
