--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = anedya-dev-sdk
-version = 0.1.1
+version = 0.1.2
 url = https://github.com/anedyaio/anedya-dev-sdk-pyhton
 author = Anedya Systems
 author_email = support@anedya.io
 description = Anedya python based SDK for IoT devices. This SDK streamlines connectivity with Anedya platform. As this SDK is in Beta release, future versions may have breaking changes.
 long_description = file: README.md
-requires-python = ">=3.7"
+requires_python = ">=3.7"
 dependencies = ["requests","paho-mqtt>=2.0.0"]
 license = Apache License 2.0
 classifiers =
@@ -26,6 +26,11 @@ project_urls =
 
 [bdist_wheel]
 universal = 1
+
+[options]
+install_requires =
+    requests
+    paho-mqtt >= 2.0.0
 
 [flake8]
 # For the definitions of error codes, see
