--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 project_urls =
     Documentation = https://docs.anedya.io
-    Release notes = https://github.com/anedyaio/anedya-dev-sdk-python
+    Release notes = https://github.com/anedyaio/anedya-dev-sdk-python/blob/main/HISTORY.md
     Source = https://github.com/anedyaio/anedya-dev-sdk-python
 
 [bdist_wheel]
